Add github project repo to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
     <div class="inner">
         <div class="logo">Awesome Corp.:innen</div>
+        <a href="https://github.com/codingAlphay/wgpm-aufgabe2" target="_blank" class="logo" style="background-color: cadetblue;">Zum Github Repo:innen</a>
         <nav class="mainNavi">
             <ul class="level_1">
                 <li><a href="#">Our Products:innen</a>
